vlc-java/src/main/java/com/tek/vlc/jna/LibvlcLibrary.java

        /** <i>native declaration : line 2803</i> */
        public static final int libvlc_logo_opacity = 6;
        /** <i>native declaration : line 2804</i> */
        public static final int libvlc_logo_position = 7;
    };
    /**
     * option values for libvlc_video_{get,set}_adjust_{int,float,bool}<br>
     * <i>native declaration : line 2842</i><br>
     * enum values
     */
    public static interface libvlc_video_adjust_option_t {
        /** <i>native declaration : line 2843</i> */
        public static final int libvlc_adjust_Enable = 0;
        /** <i>native declaration : line 2844</i> */
        public static final int libvlc_adjust_Contrast = 1;
        /** <i>native declaration : line 2845</i> */
        public static final int libvlc_adjust_Brightness = 2;
        /** <i>native declaration : line 2846</i> */
        public static final int libvlc_adjust_Hue = 3;
        /** <i>native declaration : line 2847</i> */
        public static final int libvlc_adjust_Saturation = 4;
        /** <i>native declaration : line 2848</i> */
        public static final int libvlc_adjust_Gamma = 5;
    };
    /** enum values */
    public static interface libvlc_audio_output_device_types_t {
        /** <i>native declaration : line 2907</i> */
        public static final int libvlc_AudioOutputDevice_Error = -1;
        /** <i>native declaration : line 2908</i> */
        public static final int libvlc_AudioOutputDevice_Mono = 1;
        /** <i>native declaration : line 2909</i> */
        public static final int libvlc_AudioOutputDevice_Stereo = 2;
        /** <i>native declaration : line 2910</i> */
        public static final int libvlc_AudioOutputDevice_2F2R = 4;
        /** <i>native declaration : line 2911</i> */
        public static final int libvlc_AudioOutputDevice_3F2R = 5;
        /** <i>native declaration : line 2912</i> */
        public static final int libvlc_AudioOutputDevice_5_1 = 6;
        /** <i>native declaration : line 2913</i> */
        public static final int libvlc_AudioOutputDevice_6_1 = 7;
        /** <i>native declaration : line 2914</i> */
        public static final int libvlc_AudioOutputDevice_7_1 = 8;
        /** <i>native declaration : line 2915</i> */
        public static final int libvlc_AudioOutputDevice_SPDIF = 10;
    };
    /** enum values */
    public static interface libvlc_audio_output_channel_t {
        /** <i>native declaration : line 2922</i> */
        public static final int libvlc_AudioChannel_Error = -1;
        /** <i>native declaration : line 2923</i> */
        public static final int libvlc_AudioChannel_Stereo = 1;
        /** <i>native declaration : line 2924</i> */
        public static final int libvlc_AudioChannel_RStereo = 2;
        /** <i>native declaration : line 2925</i> */
        public static final int libvlc_AudioChannel_Left = 3;
        /** <i>native declaration : line 2926</i> */
        public static final int libvlc_AudioChannel_Right = 4;
        /** <i>native declaration : line 2927</i> */
        public static final int libvlc_AudioChannel_Dolbys = 5;
    };
    /** enum values */
    public static interface libvlc_playback_mode_t {
        /** <i>native declaration : line 3682</i> */
        public static final int libvlc_playback_mode_default = 0;
        /** <i>native declaration : line 3683</i> */
        public static final int libvlc_playback_mode_loop = 1;
        /** <i>native declaration : line 3684</i> */
        public static final int libvlc_playback_mode_repeat = 2;
    };
    public static final int LIBVLC_STRUCTURES_H = (int)1;
    public static final int VLC_LIBVLC_H = (int)1;
    public static final int VLC_LIBVLC_MEDIA_H = (int)1;
    public static final int VLC_LIBVLC_MEDIA_PLAYER_H = (int)1;
    public static final int LIBVLC_MEDIA_LIST_H = (int)1;
    public static final int LIBVLC_MEDIA_LIST_PLAYER_H = (int)1;
    public static final int VLC_LIBVLC_MEDIA_LIBRARY_H = (int)1;
    public static final int VLC_LIBVLC_MEDIA_DISCOVERER_H = (int)1;
    public static final int LIBVLC_VLM_H = (int)1;
    public interface libvlc_callback_t extends Callback {
        void apply(LibvlcLibrary.libvlc_event_t libvlc_event_tPtr1, Pointer voidPtr1);
    };
    public interface libvlc_log_cb extends Callback {
        void apply(Pointer data, int level, Pointer ctx, Pointer fmt, Object... args);
    };
    /** <i>native declaration : line 260</i> */
    public interface libvlc_set_exit_handler_cb_callback extends Callback {
        void apply(Pointer voidPtr1);
    };
    public interface libvlc_media_open_cb extends Callback {
        int apply(Pointer opaque, PointerByReference datap, LongByReference sizep);
    };
    /**
     * Callback prototype to read data from a custom bitstream input media.<br>
     * * \param opaque private pointer as set by the @ref libvlc_media_open_cb<br>
     *               callback<br>
     * \param buf start address of the buffer to read data into<br>
     * \param len bytes length of the buffer<br>
     * * \return strictly positive number of bytes read, 0 on end-of-stream,<br>
     *         or -1 on non-recoverable error<br>
     * * \note If no data is immediately available, then the callback should sleep.<br>
     * \warning The application is responsible for avoiding deadlock situations.<br>
     * In particular, the callback should return an error if playback is stopped;<br>
     * if it does not return, then libvlc_media_player_stop() will never return.<br>
     * <i>native declaration : line 1012</i>
     */
    public interface ssize_t extends Callback {
        LibvlcLibrary.ssize_t_callback apply(Pointer libvlc_media_read_cb);
    };
    public interface libvlc_media_seek_cb extends Callback {
        int apply(Pointer opaque, long offset);
    };
    public interface libvlc_media_close_cb extends Callback {
        void apply(Pointer opaque);
    };
    public interface ssize_t_callback extends Callback {
        int apply(Pointer opaque, Pointer buf, NativeSize len);
    };
    public interface libvlc_video_lock_cb extends Callback {
        Pointer apply(Pointer opaque, PointerByReference planes);
    };
    public interface libvlc_video_unlock_cb extends Callback {
        void apply(Pointer opaque, Pointer picture, PointerByReference planes);
    };
    public interface libvlc_video_display_cb extends Callback {
        void apply(Pointer opaque, Pointer picture);
    };
    public interface libvlc_video_format_cb extends Callback {
        int apply(PointerByReference opaque, Pointer chroma, IntByReference width, IntByReference height, IntByReference pitches, IntByReference lines);
    };
    public interface libvlc_video_cleanup_cb extends Callback {
        void apply(Pointer opaque);
    };
    public interface libvlc_audio_play_cb extends Callback {
        void apply(Pointer data, Pointer samples, int count, long pts);
    };
    public interface libvlc_audio_pause_cb extends Callback {
        void apply(Pointer data, long pts);
    };
    public interface libvlc_audio_resume_cb extends Callback {
        void apply(Pointer data, long pts);
    };
    public interface libvlc_audio_flush_cb extends Callback {
        void apply(Pointer data, long pts);
    };
    public interface libvlc_audio_drain_cb extends Callback {
        void apply(Pointer data);
    };
    public interface libvlc_audio_set_volume_cb extends Callback {
        void apply(Pointer data, float volume, byte mute);
    };
    public interface libvlc_audio_setup_cb extends Callback {
        int apply(PointerByReference data, Pointer format, IntByReference rate, IntByReference channels);
    };
    public interface libvlc_audio_cleanup_cb extends Callback {
        void apply(Pointer data);
    };
    /**
     * A human-readable error message for the last LibVLC error in the calling<br>
     * thread. The resulting string is valid until another error occurs (at least<br>
     * until the next LibVLC call).<br>
     * @warning<br>
     * This will be NULL if there was no error.<br>
     * Original signature : <code>char* libvlc_errmsg()</code><br>
     * <i>native declaration : line 161</i>
     */
    Pointer libvlc_errmsg();
    /**
     * Clears the LibVLC error status for the current thread. This is optional.<br>
     * By default, the error status is automatically overridden when a new error<br>
     * occurs, and destroyed when the thread exits.<br>
     * Original signature : <code>void libvlc_clearerr()</code><br>
     * <i>native declaration : line 168</i>
     */
    void libvlc_clearerr();
    /**
     * Sets the LibVLC error status and message for the current thread.<br>
     * Any previous error is overridden.<br>
     * \param fmt the format string<br>
     * \param ap the arguments<br>
     * \return a nul terminated string in any case<br>
     * Original signature : <code>char* libvlc_vprinterr(const char*, va_list)</code><br>
     * <i>native declaration : line 177</i><br>
     * @deprecated use the safer methods {@link #libvlc_vprinterr(java.lang.String, java.lang.Object)} and {@link #libvlc_vprinterr(com.sun.jna.Pointer, java.lang.Object)} instead
     */
    @Deprecated 
    Pointer libvlc_vprinterr(Pointer fmt, Object... ap);
    /**
     * Sets the LibVLC error status and message for the current thread.<br>
     * Any previous error is overridden.<br>
     * \param fmt the format string<br>
     * \param ap the arguments<br>
     * \return a nul terminated string in any case<br>
     * Original signature : <code>char* libvlc_vprinterr(const char*, va_list)</code><br>
     * <i>native declaration : line 177</i>
     */
    Pointer libvlc_vprinterr(String fmt, Object... ap);
    /**
     * Sets the LibVLC error status and message for the current thread.<br>
     * Any previous error is overridden.<br>
     * \param fmt the format string<br>
     * \param args the arguments<br>
     * \return a nul terminated string in any case<br>
     * Original signature : <code>char* libvlc_printerr(const char*, null)</code><br>
     * <i>native declaration : line 186</i><br>
     * @deprecated use the safer methods {@link #libvlc_printerr(java.lang.String, java.lang.Object)} and {@link #libvlc_printerr(com.sun.jna.Pointer, java.lang.Object)} instead
     */
    @Deprecated 
    Pointer libvlc_printerr(Pointer fmt, Object... varArgs1);
    /**
     * Sets the LibVLC error status and message for the current thread.<br>
     * Any previous error is overridden.<br>
     * \param fmt the format string<br>
     * \param args the arguments<br>
     * \return a nul terminated string in any case<br>
     * Original signature : <code>char* libvlc_printerr(const char*, null)</code><br>
     * <i>native declaration : line 186</i>
     */
    Pointer libvlc_printerr(String fmt, Object... varArgs1);
